Added main page html
edited main page background

--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -344,6 +344,15 @@ code {
   display: block;
 }
 
+.home{
+   background: url('../menu-img.jpg');
+   background-repeat: no-repeat;
+   background-size:cover;
+   min-height:700px;
+}
+
+
+
 
 /* 
   INTERACTIVE ELEMENTS -------------------
