Small change to main bg image position

--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -348,7 +348,8 @@ code {
    background: url('../menu-img.jpg');
    background-repeat: no-repeat;
    background-size:cover;
-   min-height:700px;
+   min-height:800px;
+   background-position: center;
 }
 
 
