--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -11,9 +11,21 @@
 
 body {
   font-family: "Lato", sans-serif;
-  padding: 2rem;
   background-color: rgb(255,244,230);
   font-color: rgb(60,47,47);
+    width: 100%;  
+    height: 100%; 
+    margin: 0;
+}
+
+html {
+    width: 100%;  
+    height: 100%; 
+    margin: 0;
+}
+
+div{
+
 }
 
 .totals{
@@ -33,9 +45,10 @@ button{
 }
 
 .header{
-  font-size: 5rem;
-  font-style: italic;
+  font-size: 3rem;
   position: fixed;
+  top:4rem;
+  margin-left: 2rem;
 }
 
 header{
@@ -316,8 +329,13 @@ a{
 }
 
 nav{
-   margin-bottom: 2rem;
+   padding-bottom: 1.5rem;
+   padding-top: 1.5rem;
    text-align: center;
+   width: 100%;
+   background: rgb(255,244,230); 
+   position: fixed;
+   top: 0;
 }
 
 nav a{
@@ -344,20 +362,74 @@ code {
   display: block;
 }
 
-.home{
+.bg-image{
    background: url('../menu-img.jpg');
    background-repeat: no-repeat;
    background-size:cover;
-   min-height:800px;
    background-position: center;
+}
+
+.bg-image.one{
+
 }
 
 .light-text{
   color: rgb(255,244,230);
   padding-top: .5rem;
+  max-width: 40%;
+  min-width: 30%;
 }
 
+.middletitle{
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    transform: translateX(-50%) translateY(-50%);
+}
 
+.middletext{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.container{
+   display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.panel{
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+p{
+  margin-top: 0px;
+}
+
+.panel.first {
+    background: url('../menu-img.jpg');
+}
+.panel.second {
+    background: url('../menu-img.jpg');
+}
+.panel.third {
+    background: url('../menu-img.jpg');
+}
+
+.product-img{
+  
+  )
 
 
 /* 
