--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -394,6 +394,8 @@ code {
     transform: translateX(-50%) translateY(-50%);
 }
 
+
+
 .container{
    display: -webkit-flexbox;
     display: -ms-flexbox;
@@ -425,7 +427,29 @@ code {
 
 .product-img{
 
-  )
+  }
+
+  .column-half{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .equalHW {
+    flex: 1;
+  }
+
+  .equalHW p{
+    padding-left: 3rem;
+    padding-top: 3rem;
+    padding-bottom: 3rem;
+  }
+
+  .equalHW img{
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+  }
+
 
 
 /* 
