--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -440,8 +440,10 @@ code {
   }
 
   .equalHW p{
-    padding-left: 3rem;
-    padding-bottom: 3rem;
+    padding-left: 10%;
+    padding-right: 10%;
+    line-height: 1.7rem;
+    vertical-align: center;
     position: relative;
   }
 
@@ -451,7 +453,11 @@ code {
     max-height: 100%;
   }
 
-
+  .texta{
+    width:49%;
+    padding:10px,10px;
+    box-sizing: border-box;
+  }
 
 /* 
   INTERACTIVE ELEMENTS -------------------
