--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -2,24 +2,39 @@
   STYLE GUIDE STYLING 
   Default styling for the style guide 
 */
+@import url('https://fonts.googleapis.com/css?family=Avenir');
+@import url('https://fonts.googleapis.com/css?family=Lato');
 
 *, *::after, *::before {
     box-sizing:border-box;
 }
 
 body {
-  font-family: "Garamond";
-  padding: 2rem;
+  font-family: "Lato", sans-serif;
   background-color: rgb(255,244,230);
   font-color: rgb(60,47,47);
+    width: 100%;  
+    height: 100%; 
+    margin: 0;
+}
+
+html {
+    width: 100%;  
+    height: 100%; 
+    margin: 0;
+}
+
+div{
+
 }
 
 .totals{
-  font-size: 1.5rem;
+  font-size: 1.5rem;  
 }
 
 button{
   text-transform: uppercase;
+  cursor: pointer;
 }
 
 .button-navi{
@@ -30,9 +45,10 @@ button{
 }
 
 .header{
-  font-size: 5rem;
-  font-style: italic;
+  font-size: 3rem;
   position: fixed;
+  top:4rem;
+  margin-left: 2rem;
 }
 
 header{
@@ -61,9 +77,14 @@ header{
 
 .right div{
   padding: 2rem;
-  border-left-style: dashed;
+
   border-width: .1rem;
   border-color: #9b6d4f;
+}
+
+.header{
+  font-size: 2rem;
+  letter-spacing: .2rem;
 }
 
 .pagenav{
@@ -142,14 +163,15 @@ ul{
 
 button{
   display: inline-block;
-  font-family: garamond;
-  font-size: 1rem;
+  font-size: .75rem;
   padding: 1rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   color: white;
   background-color: rgb(66,50,50);
   text-decoration: none;
   transition-property: background-color; 
-  transition-duration: 1s;
+  transition-duration: 0.5s;
   border-style: none;
 }
 
@@ -161,6 +183,7 @@ button{
 .imagelink:hover{
   opacity: 0.7;
   transition-duration: 0.5s;
+
 }
 
 button:hover, button:focus{
@@ -180,7 +203,7 @@ button:hover, button:focus{
 }
 
 input:hover{
-  background-color: rgb(230,210,200);
+
 }
 
 .months{
@@ -249,7 +272,6 @@ h2 {
 }
 
 h3 {
-  font-style: italic;
   margin-top: 1rem;
 }
 
@@ -259,7 +281,6 @@ h4 {
 
 .bodyp {
   max-width: 75%;
-  padding:20px;
   line-height: 1.7rem;
   margin-top: 0;
 }
@@ -295,6 +316,7 @@ h4 {
 
 p{
   padding-top: .5rem;
+   margin-top: 0px;
 
 }
 
@@ -302,15 +324,41 @@ img{
   width:20rem;
 }
 
+img:hover{
+  transition-duration: 0.5s;
+}
+
 a{
     color: rgb(133,68,66);
     text-decoration: none;
 }
 
+nav{
+   padding-bottom: 1.5rem;
+   padding-top: 1.5rem;
+   text-align: center;
+   width: 100%;
+   background: rgb(255,244,230); 
+   position: fixed;
+   top: 0;
+}
+
+nav a{
+  text-align: center;
+  padding: 1.5rem;
+  letter-spacing: 1px;
+  font-size: 0.8rem;
+}
+
+nav a:hover, nav a:focus {
+  color: #eee3ce;
+  text-decoration: none;
+}
+
+
 nav a:hover, nav a:focus {
   color: rgb(75,56,50);
-  text-decoration: underline;
-  transition-duration: .1s;
+  transition-duration: .5s;
 }
 
 code {
@@ -319,26 +367,106 @@ code {
   display: block;
 }
 
+.bg-image{
+   background: url('../menu-img.jpg');
+   background-repeat: no-repeat;
+   background-size:cover;
+   background-position: center;
+}
+
+.bg-image.one{
+
+}
+
+.light-text{
+  color: rgb(255,244,230);
+  padding-top: .5rem;
+  max-width: 40%;
+  min-width: 30%;
+}
+
+.middletitle{
+    position: absolute;
+    top: 30%;
+    left: 30%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+.middletext{
+    position: absolute;
+    top: 50%;
+    left: 30%;
+    transform: translateX(-50%) translateY(-50%);
+}
+
+
+
+.container{
+   display: -webkit-flexbox;
+    display: -ms-flexbox;
+    display: -webkit-flex;
+    display: flex;
+    -webkit-flex-align: center;
+    -ms-flex-align: center;
+    -webkit-align-items: center;
+    align-items: center;
+    justify-content: center;
+}
+
+.panel{
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.panel.first {
+    background: url('../menu-img.jpg');
+}
+
+  .column-half{
+    display: flex;
+    justify-content: space-between;
+  }
+
+  .equalHW {
+    flex: 1;
+  }
+
+  .image-holder-div {
+  position: absolute;
+  background-color: white;
+  padding: 15px;
+}
+
+  .equalHW h3{
+    padding-left: 3rem;
+    padding-top: 3rem;
+  }
+
+  .equalHW p{
+    padding-left: 10%;
+    padding-right: 10%;
+    line-height: 1.7rem;
+    vertical-align: center;
+    position: relative;
+  }
+
+  .equalHW img{
+    width: 100%;
+    height: 100%;
+    max-height: 100%;
+  }
+
+  .texta{
+    width:49%;
+    padding:10px,10px;
+    box-sizing: border-box;
+  }
 
 /* 
   INTERACTIVE ELEMENTS -------------------
 */
-
-/* Styling for the navigation button */
-.button-nav {
-  display: inline-block;
-  padding: 0.5rem;
-  color: white;
-  background-color: rgb(50,50,50);
-  text-decoration: none;
-  transition-property: background-color; 
-  transition-duration: 1s;
-}
-
-.button-nav:hover, .button-nav:focus {
-  background-color: rgb(200,200,200);
-}
-
 
 
 /* 
