--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -415,17 +415,6 @@ code {
     justify-content: center;
 }
 
-.panel{
-    width: 100%;
-    height: 100%;
-    background-repeat: no-repeat;
-    background-size: cover;
-}
-
-.panel.first {
-    background: url('../menu-img.jpg');
-}
-
   .column-half{
     display: flex;
     justify-content: space-between;
@@ -464,6 +453,22 @@ code {
     width:49%;
     padding:10px,10px;
     box-sizing: border-box;
+  }
+
+  .text-overlay{
+    width: 100%
+    height:100%;
+  }
+
+  .text-overlay div{
+    position:absolute; height:100%; width:100%;
+    display: table;
+  }
+
+  .text-display h3, .text-display p{
+    display: table-cell;
+    vertical-align: middle;
+    text-align:center;
   }
 
 /* 
