--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -102,7 +102,7 @@ header{
 
 .grid2{
   flex:2;
-  padding-right: 5rem;
+ 
   min-width: 40rem;
 }
 
@@ -110,23 +110,14 @@ header{
   transform: translate(0,-6rem);
   flex:1;
   font-size: 1.5rem;
-  border-left-width: .1rem;
-  border-left-style: dashed;
   min-width: 25rem;
   max-width: 30rem;
-}
-
-ul li{
 }
 
 li a{
   display: block;
   padding: 0.5rem 2px;
   text-decoration: none;
-}
-
-li a:hover {
-
 }
 
 ul{
@@ -200,10 +191,6 @@ button:hover, button:focus{
   box-sizing:border-box;
   border-color: rgb(100,45,45);
   
-}
-
-input:hover{
-
 }
 
 .months{
@@ -446,12 +433,11 @@ code {
   .equalHW img{
     width: 100%;
     height: 100%;
-    max-height: 100%;
+    object-fit: cover;
   }
 
   .texta{
     width:49%;
-    padding:10px,10px;
     box-sizing: border-box;
   }
 
