Edited footer color and added buttons to events

--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -31,7 +31,7 @@ div{
 }
 
 footer {
-    background-color: rgb(33, 28, 28);
+    background-color: rgb(66,50,50);
     position: relative;
     left: 0;
     bottom: 0;
@@ -67,6 +67,11 @@ color: rgb(170,130,110);
 button{
   text-transform: uppercase;
   cursor: pointer;
+}
+
+.event-button{
+  margin-top: 1rem;
+  margin-bottom: 1rem;
 }
 
 .button-navi{
