--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -118,6 +118,7 @@ header{
   display: flex;
   flex-wrap: wrap;
   justify-content: center;
+  padding-top: 2rem;
 }
 
 .checkright{
@@ -586,6 +587,54 @@ code {
 .linkimage:focus{
   opacity:0.75;
 }
+
+.content-over-image-container{
+  position: relative;
+}
+
+.content-over-image{
+    z-index:100;
+    position:absolute;    
+    color:white;
+    font-weight:bold;
+    left:150px;
+    top:350px;
+}
+
+.full-image{
+    position:absolute;
+    left:0;
+    top:0;
+    width: 100%;
+    height: 100%;
+    object-fit: cover;
+    flex: 1;
+    display: flex;
+    flex-direction: column;
+}
+
+#container
+{
+    
+    
+}
+
+#image
+{    
+    position:absolute;
+    
+}
+#text
+{
+    z-index:100;
+    position:absolute;    
+    color:white;
+    font-size:24px;
+    font-weight:bold;
+    left:150px;
+    top:350px;
+}
+
 /* 
   INTERACTIVE ELEMENTS -------------------
 */
