--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -52,7 +52,7 @@ footer p{
   padding-top: 3rem;
 }
 
-i{
+footer i{
   color: rgb(255,244,230);
   transition: 0.5s ease;
   cursor: pointer;
@@ -60,8 +60,13 @@ i{
   margin-right: 0.5rem;
 }
 
-i:hover{
+footer i:hover{
 color: rgb(170,130,110);
+}
+
+button i{
+  color: rgb(255,244,230);
+  margin-right: 0.5rem;
 }
 
 nav i{
