--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -45,6 +45,8 @@ footer {
 
 .homesplash{
   position:relative;
+  display: grid;
+  min-height: 92vh;
 }
 
 .homesplash p{
@@ -57,12 +59,13 @@ footer {
 
 .homebotbanner{
   position:relative;
+  background-color: rgb(66,50,50);
 }
 
 .homebotbanner button{
   position:absolute;
   background-color: rgba(0,0,0,0);
-  font-size: 4rem;
+  font-size: 0.8rem;
   text-align: center;
   width: 50%;
   height: 50%;
@@ -72,6 +75,10 @@ footer {
 
 .homebotbanner button:hover{
   background-color: rgba(66,50,50,0.5);
+}
+
+.homebotbanner img{
+opacity: 0.4;
 }
 
 .itemtop{
@@ -424,7 +431,7 @@ h1, h2, h3, h4, h5{
 }
 
 h2 {
-  margin-top: 1rem;
+  margin-top: 0;
 }
 
 .grid h2{
@@ -432,6 +439,7 @@ h2 {
 }
 
 h3 {
+  margin-top: 0;
 }
 
 h4 {
@@ -478,6 +486,8 @@ p{
 
 img{
   width:100%;
+  height: 100%;
+  object-fit: cover;
 }
 
 img:hover{
@@ -566,6 +576,7 @@ code {
   .column-half{
     display: flex;
     justify-content: space-between;
+    min-height: 92vh;
   }
 
   .equalHW {
@@ -601,6 +612,10 @@ code {
 
  /*apply class twice in order to override settings applied for more than 1000px*/
    .equalHW.equalHW h3{
+    margin-top: 1.5rem;
+  }
+
+  .equalHW h2{
     margin-top: 1.5rem;
   }
 
