Updated citations page
added all image and text citations

--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -921,6 +921,11 @@ code {
   to {bottom: 0; opacity: 0;}
 }
 
+.citations-div{
+  margin-left: 3rem;
+  margin-right: 3rem;
+}
+
 /*------------------------------------DIFFERENT PHONE SIZE LAYOUTS--------------------------------------*/
 
 /* #### Mobile Phones Portrait #### */
