--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -335,10 +335,11 @@ button:hover, button:focus{
   padding:2rem;
   right:0;
   top:0;
-  background: rgb(255,244,230); 
+
   min-height: 80%;
   width:30rem;
   z-index: 1;
+  visibility: hidden;
   transform: translate(40rem);
   transition: 0.5s;
 }
@@ -447,7 +448,7 @@ h4 {
 }
 
 .prices{
-  text-align: right;
+
 }
 
 .rightalign{
@@ -939,17 +940,52 @@ code {
 
 /* #### Mobile Phones Portrait #### */
 @media screen and (max-device-width: 480px) and (orientation: portrait){
-  /* some CSS here */
+  .billing{
+    position:relative;
+    margin-top: 3rem;
+    padding:2rem;
+    right:0;
+    top:0;
+    transform: translate(40,10rem);
+    min-height: 80%;  
+    z-index: 200;
+  }
+  footer{
+    visibility: hidden;
+  }
 }
 
 /* #### Mobile Phones Landscape #### */
-@media screen and (max-device-width: 640px) and (orientation: landscape){
-  /* some CSS here */
+@media screen and (max-device-width: 900px) and (orientation: landscape){
+   .billing{
+    position:relative;
+    margin-top: 3rem;
+    padding:2rem;
+    right:0;
+    top:0;
+
+    min-height: 80%;  
+    z-index: 200;
+  }
+    footer{
+    visibility: hidden;
+  }
 }
 
 /* #### Mobile Phones Portrait or Landscape #### */
-@media screen and (max-device-width: 640px){
-  /* some CSS here */
+@media only screen and (max-width: 720px){
+  .prices{
+
+  }
+  .billing{
+    position:relative;
+    margin-top: 3rem;
+    padding:2rem;
+    right:0;
+    top:0;
+    min-height: 80%;  
+    z-index: 200;
+  }
 }
 
 /* #### iPhone 4+ Portrait or Landscape #### */
