--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -472,6 +472,12 @@ h4 {
   text-align: right;
 }
 
+.dim{
+  position:absolute;
+  background-color: black;
+  border-style: solid;
+}
+
 p{
   padding-top: .5rem;
    margin-top: 0px;
