--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -555,6 +555,10 @@ nav img:hover{
    display: none;
 }
 
+.review{
+  padding:5rem;
+}
+
 /*code for hamburger responsive nav bar found at: https://www.w3schools.com/howto/howto_js_topnav_responsive.asp*/
 
 /* When the screen is less than 600 pixels wide, hide all links. Show the link that contains should open and close the topnav (.icon) */
