--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -1,7 +1,3 @@
-
-  STYLE GUIDE STYLING 
-  Default styling for the style guide 
-*/
 @import url('https://fonts.googleapis.com/css?family=Avenir');
 @import url('https://fonts.googleapis.com/css?family=Lato');
 
@@ -13,7 +9,7 @@
 body {
   font-family: "Lato", sans-serif;
   background-color: rgb(255,244,230);
-  font-color: rgb(60,47,47);
+  color: rgb(60,47,47);
   width: 100%;  
   height: 100%; 
   margin: 0;
@@ -220,10 +216,6 @@ header{
   margin-top: 1rem;
 }
 
-.select-display button{
-
-}
-
 .grid{
   flex:1;
   max-width: 25rem;
@@ -235,13 +227,6 @@ margin-bottom: 2rem;
 
 .grid img{
   height: 70%;
-}
-
-.crop-image{
-}
-
-.crop-image img{
-
 }
 
 .grid2{
@@ -407,7 +392,7 @@ input[name=cc]{
 }
 
 input[name=ccv]{
-  align-self: right;
+  text-align: right;
   width:17%;
   padding:10px 10px;
   margin:15px 0;
@@ -589,7 +574,7 @@ nav img:hover{
 }
 
 code {
-  background-color: rgb(255);
+  background-color: rgb(255, 255, 255);
   padding: 0.5rem;
   display: block;
 }
@@ -761,7 +746,7 @@ code {
   }
 
   .text-overlay{
-    width: 100%
+    width: 100%;
     height:100%;
   }
 
@@ -814,12 +799,6 @@ code {
     flex: 1;
     display: flex;
     flex-direction: column;
-}
-
-#container
-{
-    
-    
 }
 
 #image
@@ -961,14 +940,4 @@ code {
   left: 40vw;
   right: 10vw;
 }
-}
-
-/* #### Mobile Phones Landscape #### */
-@media screen and (max-device-width: 900px) and (orientation: landscape){
-
-}
-
-/* #### Mobile Phones Portrait or Landscape #### */
-@media only screen and (max-width: 720px){
-
 }
