--- a/P01-Style Guide/css/main.css
+++ b/P01-Style Guide/css/main.css
@@ -48,8 +48,8 @@ footer {
 .homesplash p{
   position:absolute;
   color:white;
-  font-size: 2vw;
-  line-height: 3vw;
+  font-size: 1vw;
+  line-height: 2vw;
   top: 20vh;
   left: 60vw;
   right: 10vw;
@@ -935,6 +935,18 @@ code {
   position:absolute;
   color:white;
   font-size: 4vw;
+  line-height: 5vw;
+  top: 20vh;
+  left: 40vw;
+  right: 10vw;
+}
+}
+
+@media only screen and (max-width: 1000px){
+.homesplash p{
+  position:absolute;
+  color:white;
+  font-size: 3vw;
   line-height: 5vw;
   top: 20vh;
   left: 40vw;
